# jfc-memory

./: CMakeLists.txt  README.md
docs/: CMakeLists.txt
include/gdk/: static_pool.h
include/jfc/: bounded_pool.h  default_ptr.h  dynamic_pool.h  final_action.h  lazy_ptr.h  locking_queue.h  resource_manager.h  shared_proxy_ptr.h  static_pool.h  strong_map.h  strong_vector.h
test/: CMakeLists.txt  default_ptr_test.cpp  dynamic_pool_test.cpp  example_test.cpp  final_action_test.cpp  lazy_ptr_test.cpp  locking_queue_test.cpp  shared_proxy_ptr_test.cpp  static_pool_test.cpp  strong_map_test.cpp  strong_vector_test.cpp
